--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -18,13 +18,13 @@ jobs:
     # в github actions будет выводиться название шага, и процессы
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
+        uses: actions/checkout@v3
         with:
           repository: svetilnikovdb/Enterprise2
           ref: main
 
       - name: Run program
-        run: python hw.py
+        run: java Main.java
       
 
     
