--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,7 +22,10 @@ jobs:
         with:
           repository: svetilnikovdb/Enterprise2
           ref: main
+          
 
+      - name: Install dependencies
+        run: pip install selenium
       - name: Run program
         run: python seleniumChrome.py
       
