--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,13 +22,12 @@ jobs:
         with:
           repository: svetilnikovdb/Enterprise2
           ref: main
-          
-
+        
       - name: Install dependencies
-        run: pip install selenium
-      - name: Run program
-        run: python seleniumChrome.py
-      
+        run: pip install -r requirements.txt
+      - name: Run UI-tests
+        run: |
+          pytest seleniumChrome.py   
 
     
 
