--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -19,9 +19,12 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
+      - name: setup python
+        uses: actions/setup -python@v2
         with:
           repository: svetilnikovdb/Enterprise2
           ref: main
+          python-version: '3.10'
         
       - name: install software
       - run: sudo apt-get install -y chromium-browser
