--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -27,7 +27,7 @@ jobs:
           python-version: '3.10'
         
       - name: install software
-      - run: sudo apt-get install -y chromium-browser
+        run: sudo apt-get install -y chromium-browser
       
       - name: Install dependencies
         run: pip install -r requirements.txt
