--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,30 +1,28 @@
+# This is a basic workflow to help you get started with Actions
 name: CI
-
-
-on: [repository_dispatch, workflow_dispatch]
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-
+# целевые события для запуска
+# в данном случае это push и pull_request, в ветку main
+on:
+  push:
+    branches: [ main ]
+# выполняемые действия
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  run_program:
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - name: Check out this repo
-        uses: actions/checkout@v2
-     #Setup Python   
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
-      - name: Install software
-        run: sudo apt-get install -y chromium-browser
-      - name: Install requirements
-        run: pip install -r requirements.txt
-      - name: Run the PytTest script
-        run: pytest UITest.py
-
     
-
+    # запускаются по шагам
+    # name - название шага
+    # в github actions будет выводиться название шага, и процессы
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          repository: svetilnikovdb/Enterprise2
+          ref: main
+        
+      - name: install software
+        run: sudo apt-get install -y chromium-browser      
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      - name: Run UI-tests  
+        run: pytest UITest.py
