--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,26 +1,54 @@
-# This is a basic workflow to help you get started with Actions
 name: CI
-# целевые события для запуска
-# в данном случае это push и pull_request, в ветку main
-on:
-  push:
-    branches: [ main ]
-# выполняемые действия
-jobs:
-  run_program:
-    runs-on: ubuntu-latest
-    
-    # запускаются по шагам
-    # name - название шага
-    # в github actions будет выводиться название шага, и процессы
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
 
-        
-      - name: install software
-        run: sudo apt-get install -y chromium-browser      
-      - name: Install dependencies
+
+
+
+on: [repository_dispatch, workflow_dispatch]
+
+
+
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+
+jobs:
+
+  # This workflow contains a single job called "build"
+
+  build:
+
+    # The type of runner that the job will run on
+
+    runs-on: ubuntu-latest
+
+
+
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+
+    steps:
+
+      - name: Check out this repo
+
+        uses: actions/checkout@v2
+
+     #Setup Python   
+
+      - name: Set up Python
+
+        uses: actions/setup-python@v2
+
+        with:
+
+          python-version: '3.9'
+
+      - name: Install software
+
+        run: sudo apt-get install -y chromium-browser
+
+      - name: Install requirements
+
         run: pip install -r requirements.txt
-      - name: Run UI-tests  
+
+      - name: Run the PytTest script
+
         run: pytest UITest.py
